# gira

./: .commitlintrc.yaml  .editorconf  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  changelog.md  pyproject.toml  run_tests.sh
.github/workflows/: release-python.yaml  release.yml  test.yml
gira/: __init__.py  __main__.py  cache.py  changes.py  config.py  core.py  dependencies.py  deps.py  formatter.py  gira.py  jira.py  repo.py
tests/: README.md  run.sh
tests/local-template/: .gira.yaml  pubspec.yaml  pyproject.toml  west.yaml  west.yml
tests/local-template/poetry/: pyproject.toml
tests/remote/: dep1.tar
